Resolved issue with Java11 compilation